--- a/start_split/start_split.html
+++ b/start_split/start_split.html
@@ -7,25 +7,25 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 
 		<!-- 引入時間函數 -->
-		<script type="text/javascript" src="library/other/time.js"></script>
+		<script type="text/javascript" src="../library/other/time.js"></script>
 		
 		<!-- 引入jquery -->
-		<script type="text/javascript" src="library/jquery_library/jquery-3.6.0.js"></script>
+		<script type="text/javascript" src="../library/jquery_library/jquery-3.6.0.js"></script>
 		
 		<!-- 引入jquery-ui -->
-		<script type="text/javascript" src="library/jquery_library/jquery-ui-1.13.0.custom/jquery-ui.js"></script>
-		<link rel=stylesheet type="text/css" href="library/jquery_library/jquery-ui-1.13.0.custom/jquery-ui.css">
+		<script type="text/javascript" src="../library/jquery_library/jquery-ui-1.13.0.custom/jquery-ui.js"></script>
+		<link rel=stylesheet type="text/css" href="../library/jquery_library/jquery-ui-1.13.0.custom/jquery-ui.css">
 		
 		<!-- 引入bootstrap -->
-		<link rel=stylesheet type="text/css" href="library/bootstrap_library/css/bootstrap.css">
-		<script type="text/javascript" src="library/bootstrap_library/js/bootstrap.js"></script>
+		<link rel=stylesheet type="text/css" href="../library/bootstrap_library/css/bootstrap.css">
+		<script type="text/javascript" src="../library/bootstrap_library/js/bootstrap.js"></script>
 		
 		<!-- 引入jquery-confirm -->
-		<link rel=stylesheet type="text/css" href="library/jquery_library/jquery-confirm-v3.3.4/dist/jquery-confirm.min.css">
-		<script type="text/javascript" src="library/jquery_library/jquery-confirm-v3.3.4/dist/jquery-confirm.min.js"></script>
+		<link rel=stylesheet type="text/css" href="../library/jquery_library/jquery-confirm-v3.3.4/dist/jquery-confirm.min.css">
+		<script type="text/javascript" src="../library/jquery_library/jquery-confirm-v3.3.4/dist/jquery-confirm.min.js"></script>
 
 		<!-- 引入相關css -->
-		<link rel=stylesheet type="text/css" href="index.css">
+		<link rel=stylesheet type="text/css" href="start_split.css">
 		
 		<script type="text/javascript">
 			$(document).ready(function(){
