--- a/Split_Bills/index.html
+++ b/Split_Bills/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>
-			Split Billss
+			Split Bills
 		</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 
