--- a/Split_Bills/start_split/start_split.html
+++ b/Split_Bills/start_split/start_split.html
@@ -2697,7 +2697,7 @@
 			console.log(test_s2.min_transfer_step([80,-30,-50]));
 			
 			
-			console.log(test_s2.min_transfer_step([-220, -200, -30, 220, 230, -220, -200, -30, 220, 230-220, -200, -30, 220, 230-220, -200, -30, 220, 230]));
+			console.log(test_s2.min_transfer_step([-220, -200, -30, 220, 230, -220, -200, -30, 220, 230, -220, -200, -30, 220, 230, -220, -200, -30, 220, 230]));
 		</script>
 		<style type="text/css">
 			.title{
