--- a/Split_Bills/start_split/start_split.html
+++ b/Split_Bills/start_split/start_split.html
@@ -2684,17 +2684,17 @@
 			// 測試計算
 			let test_s=new exhaustive_method();
 			console.log(test_s.min_transfer_step([-220, -200, -30, 220, 230]));
-			console.log(test_s.min_transfer_step([3, 3, 3, 3, -4, -4, -4,]));
+			console.log(test_s.min_transfer_step([3, 3, 3, 3, -4, -4, -4]));
 			console.log(test_s.min_transfer_step([30, 20, -10, -40]));
 			console.log(test_s.min_transfer_step([80,-30,-50]));
 			
 			// 測試計算
 			let test_s2=new exhaustive_method_2();
 			console.log(test_s2.min_transfer_step([-220, -200, -30, 220, 230]));
-			console.log(test_s2.min_transfer_step([3, 3, 3, 3, -4, -4, -4,]));
+			console.log(test_s2.min_transfer_step([3, 3, 3, 3, -4, -4, -4]));
 			console.log(test_s2.min_transfer_step([30, 20, -10, -40]));
 			console.log(test_s2.min_transfer_step([80,-30,-50]));
-			console.log(test_s2.min_transfer_step([-220, -200, -30, 220, 230, 10, -10]));
+			console.log(test_s2.min_transfer_step([-220, -200, -30, 220, 230, -220, -200, -30, 220, 230]));
 		</script>
 		<style type="text/css">
 			.title{
