--- a/Split_Bills/start_split/start_split.html
+++ b/Split_Bills/start_split/start_split.html
@@ -2713,7 +2713,7 @@
 			console.log(test_s2.min_transfer_step([3, 3, 3, 3, -4, -4, -4]));
 			console.log(test_s2.min_transfer_step([30, 20, -10, -40]));
 			console.log(test_s2.min_transfer_step([80,-30,-50]));
-			//console.log(test_s2.min_transfer_step([-220, -200, -30, 220, 230, -220, -200, -30, 220, 230, -220, -200, -30, 220, 230]));
+			console.log(test_s2.min_transfer_step([-220, -200, -30, 220, 230, -220, -200, -30, 220, 230, -220, -200, -30, 220, 230]));
 		</script>
 		<style type="text/css">
 			.title{
