--- a/Split_Bills/start_split/start_split.html
+++ b/Split_Bills/start_split/start_split.html
@@ -2601,9 +2601,9 @@
 					return split_process;
 				}
 			}
-			console.log(amount_first([-220, -200, -30, 230, 220],[]));
+			//console.log(amount_first([-220, -200, -30, 230, 220],[]));
 			
-			// 窮舉計算法
+			// 窮舉計算法–基本版
 			// 會出現債權身分改變 需改善
 			class exhaustive_method{
 				backtrack(bill_array,index_now,step_now,process_now){
@@ -2702,20 +2702,18 @@
 				}
 			}
 			
-			// 測試計算
+			// 測試基本版計算
+			/*
 			let test_s=new exhaustive_method();
 			console.log(test_s.min_transfer_step([-220, -200, -30, 220, 230]));
 			console.log(test_s.min_transfer_step([3, 3, 3, 3, -4, -4, -4]));
-			console.log(test_s.min_transfer_step([30, 20, -10, -40]));
-			console.log(test_s.min_transfer_step([80,-30,-50]));
+			*/
 			
-			// 測試計算
+			// 測試進階版計算
 			let test_s2=new exhaustive_method_2();
 			console.log(test_s2.min_transfer_step([-220, -200, -30, 220, 230]));
 			console.log(test_s2.min_transfer_step([3, 3, 3, 3, -4, -4, -4]));
-			console.log(test_s2.min_transfer_step([30, 20, -10, -40]));
-			console.log(test_s2.min_transfer_step([80,-30,-50]));
-			console.log(test_s2.min_transfer_step([-220, -200, -30, 220, 230, -220, -200, -30, 220, 230, -220, -200, -30, 220, 230]));
+			console.log(test_s2.min_transfer_step([-220, -200, -30, 220, 230, -220, -200, -30, 220, 230, -220, -200, -30, 220, 230, -220, -200, -30, 220, 230, -220, -200, -30, 220, 230]));
 		</script>
 		<style type="text/css">
 			.title{
