--- a/Split_Bills/start_split/start_split.html
+++ b/Split_Bills/start_split/start_split.html
@@ -2713,7 +2713,7 @@
 			let test_s2=new exhaustive_method_2();
 			console.log(test_s2.min_transfer_step([-220, -200, -30, 220, 230]));
 			console.log(test_s2.min_transfer_step([3, 3, 3, 3, -4, -4, -4]));
-			console.log(test_s2.min_transfer_step([-220, -200, -30, 220, 230, -220, -200, -30, 220, 230, -220, -200, -30, 220, 230, -220, -200, -30, 220, 230]));
+			console.log(test_s2.min_transfer_step([-220, -200, -30, 220, 230, -220, -200, -30, 220, 230, -220, -200, -30, 220, 230, -220, 220]));
 		</script>
 		<style type="text/css">
 			.title{
