--- a/Split_Bills/start_split/start_split.html
+++ b/Split_Bills/start_split/start_split.html
@@ -862,16 +862,16 @@
 				$(".jconfirm .expense_type_select").change(function(){
 					if($(this).prop("checked")){
 						//$(".jconfirm #consumer_overview .input-group").hide();
-						$(".jconfirm #consumer_overview .input-group consumption_consumer").prop("disabled",true);
-						$(".jconfirm #consumer_overview .input-group consumption_charge").prop("readonly",true);
-						$(".jconfirm #consumer_overview .input-group consumption_description").prop("readonly",true);
+						$(".jconfirm #consumer_overview .input-group .consumption_consumer").prop("disabled",true);
+						$(".jconfirm #consumer_overview .input-group .consumption_charge").prop("readonly",true);
+						$(".jconfirm #consumer_overview .input-group .consumption_description").prop("readonly",true);
 						$(".jconfirm .consumer_add_btn").css("visibility","hidden");
 					}
 					else{
 						//$(".jconfirm #consumer_overview .input-group").show();
-						$(".jconfirm #consumer_overview .input-group consumption_consumer").prop("disabled",false);
-						$(".jconfirm #consumer_overview .input-group consumption_charge").prop("readonly",false);
-						$(".jconfirm #consumer_overview .input-group consumption_description").prop("readonly",false);
+						$(".jconfirm #consumer_overview .input-group .consumption_consumer").prop("disabled",false);
+						$(".jconfirm #consumer_overview .input-group .consumption_charge").prop("readonly",false);
+						$(".jconfirm #consumer_overview .input-group .consumption_description").prop("readonly",false);
 						$(".jconfirm .consumer_add_btn").css("visibility","visible");
 					}
 				});
