--- a/Split_Bills/start_split/start_split.html
+++ b/Split_Bills/start_split/start_split.html
@@ -868,7 +868,7 @@
 						$(".jconfirm #consumer_overview .input-group .consumer_delete_btn").prop("disabled",true);
 						$(".jconfirm #consumer_overview .input-group .consumer_delete_btn").css("background-color","#e9ecef");
 						$(".jconfirm .consumer_add_btn").prop("disabled",true);
-						//$(".jconfirm .consumer_add_btn").css("visibility","hidden");#e9ecef
+						//$(".jconfirm .consumer_add_btn").css("visibility","hidden");
 					}
 					else{
 						//$(".jconfirm #consumer_overview .input-group").show();
@@ -2013,7 +2013,8 @@
 						'<table id="split_condition_table" class="table table-hover table-bordered table-bg">'+
 							'<thead>'+
 								'<tr>'+
-									'<th scope="col" style="vertical-align:middle">#</th>'+
+									//測試
+									'<th scope="col" style="vertical-align:middle" class="test_confirm">#</th>'+
 									'<th scope="col" style="vertical-align:middle;"></th>'+
 								'</tr>'+
 							'</thead>'+
@@ -2030,6 +2031,14 @@
 				
 				// 條件修改按鈕事件
 				split_condition_edit("last");
+				
+				//測試
+				$(".test_confirm").click(function(){
+					$.alert({
+						title: 'Alert!',
+						content: 'Simple alert!',
+					});
+				})
 			}
 			
 			// 條件修改按鈕事件
