--- a/Split_Bills/start_split/start_split.html
+++ b/Split_Bills/start_split/start_split.html
@@ -2013,8 +2013,7 @@
 						'<table id="split_condition_table" class="table table-hover table-bordered table-bg">'+
 							'<thead>'+
 								'<tr>'+
-									//測試
-									'<th scope="col" style="vertical-align:middle" class="test_confirm">#</th>'+
+									'<th scope="col" style="vertical-align:middle;">#</th>'+
 									'<th scope="col" style="vertical-align:middle;"></th>'+
 								'</tr>'+
 							'</thead>'+
@@ -2032,7 +2031,8 @@
 				// 條件修改按鈕事件
 				split_condition_edit("last");
 				
-				//測試
+				//測試confirm
+				/*
 				$(".test_confirm").click(function(){
 					$(this).parent().append("<button type='button' class='btn btn-primary test_confirm_btn'></button>");
 					set_test_confirm_btn();
@@ -2052,6 +2052,7 @@
 						});
 					});
 				}
+				*/
 			}
 			
 			// 條件修改按鈕事件
