--- a/Split_Bills/start_split/start_split.html
+++ b/Split_Bills/start_split/start_split.html
@@ -2013,7 +2013,7 @@
 						'<table id="split_condition_table" class="table table-hover table-bordered table-bg">'+
 							'<thead>'+
 								'<tr>'+
-									'<th scope="col" style="vertical-align:middle;">#</th>'+
+									'<th scope="col" style="vertical-align:middle;"><button type="button" class="btn btn-primary test_confirm_btn">#</button></th>'+
 									'<th scope="col" style="vertical-align:middle;"></th>'+
 								'</tr>'+
 							'</thead>'+
