--- a/Split_Bills/start_split/start_split.html
+++ b/Split_Bills/start_split/start_split.html
@@ -2013,6 +2013,7 @@
 						'<table id="split_condition_table" class="table table-hover table-bordered table-bg">'+
 							'<thead>'+
 								'<tr>'+
+									//測試
 									'<th scope="col" style="vertical-align:middle;"><button type="button" class="btn btn-primary test_confirm_btn">#</button></th>'+
 									'<th scope="col" style="vertical-align:middle;"></th>'+
 								'</tr>'+
@@ -2038,6 +2039,8 @@
 					set_test_confirm_btn();
 					$(".test_confirm_btn").click();
 				});
+				*/
+				set_test_confirm_btn();
 				function set_test_confirm_btn(){
 					$(".test_confirm_btn").click(function(){
 						console.log("clicked");
@@ -2052,7 +2055,6 @@
 						});
 					});
 				}
-				*/
 			}
 			
 			// 條件修改按鈕事件
