--- a/Split_Bills/start_split/start_split.html
+++ b/Split_Bills/start_split/start_split.html
@@ -2014,7 +2014,7 @@
 							'<thead>'+
 								'<tr>'+
 									//測試
-									'<th scope="col" style="vertical-align:middle;">#</th>'+
+									'<th scope="col" style="vertical-align:middle;"><button type="button" class="btn btn-primary test_confirm_btn">#</button></th>'+
 									'<th scope="col" style="vertical-align:middle;"></th>'+
 								'</tr>'+
 							'</thead>'+
