--- a/Split_Bills/start_split/start_split.html
+++ b/Split_Bills/start_split/start_split.html
@@ -2616,6 +2616,7 @@
 				jconfirm.defaults = {
 					backgroundDismiss: false,
 					backgroundDismissAnimation: '',
+					animateFromElement: false,
 				};
 			}
 			
