--- a/Split_Bills/start_split/start_split.html
+++ b/Split_Bills/start_split/start_split.html
@@ -2616,7 +2616,9 @@
 				jconfirm.defaults = {
 					backgroundDismiss: false,
 					backgroundDismissAnimation: '',
-					//animateFromElement: false,
+					animateFromElement: false,
+					animation: 'scale',
+					closeAnimation: 'zoom',
 				};
 			}
 			
