--- a/Split_Bills/start_split/start_split.html
+++ b/Split_Bills/start_split/start_split.html
@@ -1849,7 +1849,7 @@
 								action:	function(){}
 							}
 						},
-						onOpen: function () {
+						contentLoaded: function () {
 							$(".jconfirm-title-c").append("<div>testing</div>");
 						},
 						onContentReady: function () {
